--- a/Lesson Events (Clean Screen)/clearScreen.css
+++ b/Lesson Events (Clean Screen)/clearScreen.css
@@ -49,7 +49,7 @@ form {
     position: fixed; 
     left: 20px;
 	padding:5px 10px;
-	background-image:blue;
-	  border: 1px solid #AAA;
+	background-color:#AED6F1;
+	border: 1px solid #AAA;
 	
 }
